Fix blog dropdown z-index: set nav_item_submenu z-index to 99999

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4428,6 +4428,7 @@ input[type=text]:focus {
   min-width: 370px;
   min-height: 425px;
   position: fixed;
+  z-index: 99999;
   display: none;
   -webkit-transform: translateY(50px);
           transform: translateY(50px);
